--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
