--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 node_modules
 
 # production
@@ -15,3 +13,7 @@ ui/build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.vscode
+
+db.sqlite
