--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "requestify": "^0.2.5",
     "sequelize": "^6.20.1",
     "sqlite3": "^5.0.8"
   },
