--- a/ui/package.json
+++ b/ui/package.json
@@ -6,10 +6,13 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.3",
+    "axios": "^0.27.2",
+    "clsx": "^1.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "swr": "^1.3.0"
   },
   "scripts": {
     "dev": "react-scripts start",
