--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "swiper": "^8.2.4",
     "swr": "^1.3.0"
   },
   "scripts": {
