--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^5.8.3",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
+    "dotenv": "^16.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
