--- a/ui/package.json
+++ b/ui/package.json
@@ -10,9 +10,12 @@
     "clsx": "^1.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "react-image-lightbox": "^5.1.4",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "scripts": {
     "dev": "react-scripts start",
