--- a/ui/package.json
+++ b/ui/package.json
@@ -5,11 +5,16 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.8.3",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "swr": "^1.3.0"
